<resources>
  <string name="app_name">LIFE</string>
  <string name="google_Api_Key">AIzaSyBNCqI5mGMvpMfbjYjalutw6ohOs68apy8</string>
  <string name="facebook_app_id">1159816154142070</string>
  <string name="fb_login_protocol_scheme">fb1159816154142070</string>
  <string name="continue_with_phone">Continue with Phone</string>
  <string name="please_enter_your_contact_no">Please enter your contact no. A 4-digit code will be sent to your phone.</string>
  <string name="continue1">Continue</string>
  <string name="skip">Skip</string>
  <string name="_0000">0000</string>
  <string name="didn_t_receive_code">Didn\'t Receive Code?</string>
  <string name="request_again">Request Again</string>
  <string name="requested">Requested</string>
  <string name="approved">Approved</string>
  <string name="code_is_sent">Code is sent to </string>
  <string name="invalid_number">Please enter valid Number</string>
  <string name="invalid_otp">Please enter valid OTP</string>
  <string name="verify_phone">Verify Phone</string>
  <string name="verify_email">Verify Email</string>
  <string name="search_medicine_and_healthcare_products">Search Medicine &amp; Healthcare Products</string>
  <string name="featured_cat">Featured CATEGORIES</string>
  <string name="super_sellers">Super Sellers</string>
  <string name="home">Home</string>
  <string name="remove">REMOVE</string>
  <string name="move_to_wishlist">Move to wishList</string>
  <string name="wishList">WishList</string>
  <string name="view_details">View Details</string>
  <string name="proceed_to_checkout">Proceed To Checkout</string>
  <string name="proceed_without_offer">Proceed without offer</string>
  <string name="loading">Loading…</string>
  <string name="order_details">Order Details</string>
  <string name="coupon_discount">Coupon Discount</string>
  <string name="shipping">Shipping</string>
  <string name="know_more">Know More</string>
  <string name="total_amount">Total Amount</string>
  <string name="inclusive_of_vat">(Inclusive of VAT)</string>
  <string name="apply">Apply</string>
  <string name="deliver_to">Deliver To</string>
  <string name="deliver_to_colan">Deliver to :</string>
  <string name="apply_coupon">Apply Coupon</string>
  <string name="available_offers">Available Offers</string>
  <string name="show_more">Show More</string>
  <string name="you_may_also_like">You May also Like</string>
  <string name="add_a_new_card">Add a new card</string>
  <string name="payment_method">Payment Method</string>
  <string name="pay_with_card">Pay With Card</string>
  <string name="pay_with_cash">Pay With Cash</string>
  <string name="ship_to">Ship To</string>
  <string name="change">Change</string>
  <string name="order_total">Order Total</string>
  <string name="subtotal">Subtotal</string>
  <string name="cod_charges">COD Charges</string>
  <string name="estimated_vat">Estimated VAT</string>
  <string name="get_it_together">Urgent Delivery? Get it NOW</string>
  <string name="delivery_option">Delivery Option</string>
  <string name="confirm">Confirm</string>
  <string name="review_order">Review Order</string>
  <string name="in_your_cart">in your Cart</string>
  <string name="your_cart_is_empty">Your Cart is empty</string>
  <string name="total">Total</string>
  <string name="payment">Payment</string>
  <string name="puressentiel_purifying_antibacterial_lotion_spray_hands_and_surfaces">Puressentiel Purifying Antibacterial Lotion Spray Hands and Surfaces</string>
  <string name="trends_offers">Trending Offers</string>
  <string name="trends">Trending</string>
  <string name="recommended_for_you">Recommended for You</string>
  <string name="life_value_deals">Life Value Deals</string>
  <string name="featured_offers">Featured Offers</string>
  <string name="top_brands">Top Brands on Sale</string>
  <string name="drugs_on_prescription">On prescription Drugs</string>
  <string name="dummy_tagline">GIF Aimation</string>
  <string name="addresses">Addresses</string>
  <string name="saved_addresses">Saved Addresses</string>
  <string name="add_a_new_address">Add a new address</string>
  <string name="address">Addresses</string>
  <string name="documents">Documents</string>
  <string name="search_address">Search address</string>
  <string name="searched_term">Searched term</string>
  <string name="phoneErrorMessage">Invalid Number</string>
  <string name="fieldError">Invalid Field</string>
  <string name="email_error">Invalid Email</string>
  <string name="category">Category</string>
  <string name="prescription">Prescription</string>
  <string name="medicines">Medicines</string>
  <string name="return_items">Return Items</string>
  <string name="profile">Profile</string>
  <string name="cart">Cart</string>
  <string name="gif_aimation">GIF Aimation</string>
  <string name="on_prescription_drugs">On prescription Drugs</string>
  <string name="_60_off">60% OFF</string>
  <string name="recommended_products">You may also like:</string>
  <string name="emirate">Emirate</string>
  <string name="dubai">Dubai</string>
  <string name="area">Area</string>
  <string name="building_name">Building Name</string>
  <string name="additional_information">Additional Information (eg. Area , Landmark)</string>
  <string name="personal_details">Personal Details</string>
  <string name="last_name">Last Name</string>
  <string name="first_name">First Name</string>
  <string name="save_address">Save Address</string>
  <string name="save_cards">Save Cards</string>
  <string name="mobile_number">Mobile Number</string>
  <string name="address_details">Address Details</string>
  <string name="product_rating">Product Rating</string>
  <string name="_5">/5</string>
  <string name="product_review">Product Review</string>
  <string name="view_all_reviews">View All Reviews</string>
  <string name="disclaimer">Disclaimer</string>
  <string name="_4_8">4.8</string>
  <string name="_100_reviews">(100 reviews)</string>
  <string name="brand_puressentiel">Brand: PURESSENTIEL</string>
  <string name="brand_colon">Brand: </string>
  <string name="brands">Brands</string>
  <string name="country_of_origin_france">Country of Origin: France</string>
  <string name="country_of_origin">Country of Origin: </string>
  <string name="add_to_cart">ADD TO CART</string>
  <string name="best_selling">Best selling</string>
  <string name="delivery_to">Delivery to</string>
  <string name="abu_dhabi">Abu Dhabi</string>
  <string name="order_in_2_hrs_5mins">Order in 2 hrs 5mins</string>
  <string name="delivered_by">Delivered by: </string>
  <string name="delivery_by">Delivery by: </string>
  <string name="today_jan_2">Today, Jan 2</string>
  <string name="chloraseptic_throat">Chloraseptic Throat</string>
  <string name="aed_102_97">AED 102.97</string>
  <string name="add_all_to_cart">ADD ALL TO CART</string>
  <string name="details">The contents of this website are for informational purposes only and not intended to be a substitute for professional medical advice, diagnosis, or treatment. Please seek the advice of a physician or other qualified health provider with any questions you may have regarding a medical condition. Do not disregard professional medical advice or delay in seeking it because of something you have read on this website.</string>
  <string name="_99">99%</string>
  <string name="based_on_100_rating">Based on 100 Rating</string>
  <string name="based_on">Based on </string>
  <string name="rating">Ratings</string>
  <string name="detail_title">Details</string>
  <string name="john_wick_posted_on01_01_2021">John wick posted on01/01/2021</string>
  <string name="best_hand_sanitizer_around">Best hand sanitizer around</string>
  <string name="i_am_using_right_now_to_clean_surface_its_good_stuff_clean_well_and_does_the_job">I am using right now to clean surface its good stuff clean well and does the job.</string>
  <string name="customer_also_viewed">Customers also viewed</string>
  <string name="frequently_bought_together">Frequently Bought Together</string>
  <string name="more_info">More Info</string>
  <string name="overview">Overview</string>
  <string name="filter">FILTER</string>
  <string name="sort">SORT</string>
  <string name="view_all">View All</string>
  <string name="gps_status_enabled">gps_status_enabled</string>
  <string name="gps_status_disabled">gps_status_disabled</string>
  <string name="prescription_details">Prescription Details</string>
  <string name="or">or</string>
  <string name="upload_prescription">Upload Prescription</string>
  <string name="you_want_to_claim_insurance">You want to claim insurance?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="proceed">PROCEED</string>
  <string name="yes_i_m_interested">Yes I’m Interested</string>
  <string name="maybe_later">Maybe Later</string>
  <string name="choose_from_gallery">Choose From Gallery</string>
  <string name="take_a_picture">Take a Picture</string>
  <string name="prescription_uploaded">Prescription Uploaded</string>
  <string name="sort_filter">Sort Filter</string>
  <string name="popularity">Popularity</string>
  <string name="rating_high_to_low">Rating: High To Low</string>
  <string name="delivery_time">Delivery Time</string>
  <string name="cost_low_to_high">Cost: Low To High</string>
  <string name="cost_high_to_low">Cost: High To Low</string>
  <string name="save">Save</string>
  <string name="edit_details">Edit Details</string>
  <string name="verify_and_login">Verify and Login</string>
  <string name="non_prescription">Non - Prescriptions</string>
  <string name="prescriptions">Prescriptions</string>
  <string name="orders">Orders</string>
  <string name="returns">Returns</string>
  <string name="invoice">View invoice</string>
  <string name="tax_invoice">Tax invoice</string>
  <string name="dummy_long">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,\n sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim
        veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea com Lorem ipsum
        dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
        aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud \n exerci tation ullamcorper suscipit lobortis
        \n nisl ut aliquip ex ea comLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh \neuismod tincidunt ut laoreet dolore magna aliquam erat
        volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea com</string>
  <string name="amount_error">Please enter amount above 50</string>
  <string name="top_up">Wallet Top up</string>
  <string name="wallet_top_up_via">Wallet Top up via Refund</string>
  <string name="refund_to_bank">Refund To Bank</string>
  <string name="manage_cards">Manage Cards</string>
  <string name="cancel">Cancel</string>
  <string name="emirates_id_front">Emirates ID Front</string>
  <string name="emirates_id_back">Emirates ID Back</string>
  <string name="insurance_card_front">Insurance Card Front</string>
  <string name="insurance_card_back">Insurance Card Back</string>
  <string name="call_now">Call Now</string>
  <string name="chat_now">Chat Now</string>
  <string name="can_t_wait">Can’t wait?</string>
  <string name="chat_with_our_pharmacists">Chat with Our Pharmacists</string>
  <string name="oops">Oops!</string>
  <string name="not_able_to_find_what_you_re_looking_for">Not able to find what you’re looking for?</string>
  <string name="cant_fetch_location">We can’t fetch your location</string>
  <string name="enable_location_service">ENABLE LOCATION SERVICE</string>
  <string name="we_need_to_know_your_location_in_order_to_find_nearby_stores_amp_ensure_fast_delivery"><![CDATA[We need to know your location in order to find nearby stores & ensure fast delivery]]></string>
</resources>