<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <variable
      name="mView"
      type="com.lifepharmacy.application.ui.documents.dialog.DocTypSelectionBottomSheet" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_with_top_round_corner">

    <LinearLayout
      android:id="@+id/linearLayout5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">


      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_camera"
        style="@style/text_16_accent_dark_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="@{()->mView.onClickEmirateFront()}"
        android:text="@string/emirates_id_front"
        android:textAlignment="center"
        android:paddingVertical="@dimen/dimen_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

      <View
        android:id="@+id/divider12"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="@dimen/dimen_50dp"
        android:background="@color/color_b6b6" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_gallery"
        style="@style/text_16_accent_dark_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="@{()->mView.onClickEmirateBack()}"
        android:text="@string/emirates_id_back"
        android:textAlignment="center"
        android:paddingVertical="@dimen/dimen_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
      <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="@dimen/dimen_50dp"
        android:background="@color/color_b6b6" />

      <androidx.appcompat.widget.AppCompatTextView
        style="@style/text_16_accent_dark_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="@dimen/dimen_10dp"
        android:onClick="@{()->mView.onClickInsuranceCard()}"
        android:text="@string/insurance_card_front"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
      <View

        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="@dimen/dimen_50dp"
        android:background="@color/color_b6b6" />
      <androidx.appcompat.widget.AppCompatTextView
        style="@style/text_16_accent_dark_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="@dimen/dimen_10dp"
        android:onClick="@{()->mView.onClickInsuranceCardBack()}"
        android:text="@string/insurance_card_back"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
      <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="@dimen/dimen_50dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:background="@color/color_b6b6" />
      <androidx.appcompat.widget.AppCompatTextView
        style="@style/text_16_accent_dark_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dimen_10dp"
        android:clickable="true"
        android:elevation="2dp"
        android:textColor="@color/color_error"
        android:focusable="true"
        android:onClick="@{()->mView.onDismiss()}"
        android:text="@string/cancel"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>