<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <variable
      name="click"
      type="com.lifepharmacy.application.ui.search.ClickSearchFragment" />
  </data>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/dimen_20dp"
    android:paddingVertical="@dimen/dimen_10dp">

    <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/imageView82"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:srcCompat="@drawable/ic_empty_search" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/textView212"
      android:layout_width="match_parent"
      style="@style/text_16_accent_dark_semi_bold"
      android:layout_height="wrap_content"
      android:paddingVertical="@dimen/dimen_8dp"
      android:text="@string/oops"
      android:textAlignment="center" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/textView213"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/text_14_accent_dark_open_regular"
      android:paddingVertical="@dimen/dimen_8dp"
      android:text="@string/not_able_to_find_what_you_re_looking_for"
      android:textAlignment="center" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/button19"
      android:layout_marginVertical="@dimen/dimen_10dp"
      style="@style/blueBotton"
      android:layout_width="match_parent"
      android:onClick="@{()->click.onClickChat()}"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/textView214"
        android:layout_width="wrap_content"
        style="@style/text_12_white_semi_bold"
        android:drawablePadding="@dimen/dimen_10dp"
        android:layout_height="0dp"
        android:text="@string/chat_with_our_pharmacists"
        android:textAllCaps="true"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/ic_chat_4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </LinearLayout>


</layout>